--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>quicksilver</title>
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>under construction</h1>
   <div id="app"></div>
   <script src="/static/js/compiled/quicksilver.js" charset="utf-8"></script>
 </body>
